test/deny-all-default-policies-milan/default-deny-all-egress-milan.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: milan
spec:
  podSelector: {}
  policyTypes:
  - Egress
