test/deny-all-default-policies-milan/default-deny-all-egress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: monitoring-rome-a2d9d2
spec:
  podSelector: {}
  policyTypes:
  - Egress
