test/deny-all-default-policies-milan/default-deny-all-ingress-default-rome.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-rome-deny-ingress
  namespace: default-rome-a2d9d2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
