test/deny-all-default-policies-milan/default-deny-all-ingress-milan.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: milan
spec:
  podSelector: {}
  policyTypes:
  - Ingress
